@@ -94,5 +94,19 @@
         <record model="ir.action.act_window" id="account.act_move_line_payable_receivable">
             <field name="domain" eval="[('state', '!=', 'draft'), ('party', 'in', Eval('active_ids')), ('account.kind', 'in', ['payable', 'receivable'])]" pyson="1"/>
         </record>
+        <!-- ######################################## -->
+        <!-- # Reconcile Wizard# -->
+        <!-- ######################################## -->
+        <record model="ir.action.keyword" id="act_reconcile_keyword">
+            <field name="keyword">form_action</field>
+            <field name="model">party.party,-1</field>
+            <field name="action" ref="account.act_reconcile"/>
+        </record>
+        <record model="ir.ui.view" id="reconcile_show_view_form">
+            <field name="model">account.reconcile.show</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="account.reconcile_show_view_form"/>
+            <field name="name">reconcile_show_form</field>
+        </record>
     </data>
 </tryton>
