@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/form/field[@name='lines']" position="after">
+        <notebook>
+            <page name="lines">
+                <field name="lines"/>
+            </page>
+            <page string="Candidates">
+                <field name="parties"/>
+            </page>
+        </notebook>
+    </xpath>
+    <xpath expr="/form/field[@name='lines']" position="replace"/>
+</data>
