@@ -1,3 +1,4 @@
+* Launch reconciliation wizard from party
 * Allow to auto post move templates
 
 Version 1.6 - 2015-12-23
